--- a/public/scripts/index.html
+++ b/public/scripts/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav>
-            <img src="../assets/logo.png" alt="Logo Foodfy">
-            <a href="">About</a>
-            <a href="">Recipes</a>
+            <a href="../scripts/index.html" id="logo"><img src="../assets/logo.png" alt="Logo Foodfy"></a>
+            <a href="../scripts/about.html" id="about">About</a>
+            <a href="../scripts/recipes.html" id="recipes">Recipes</a>
         </nav>
     </header>
     <section class="content1">
@@ -32,36 +32,34 @@
                 <h4>by Jorge Relato</h4>
             </div>
             <div class="card">
-                <img src="../assets/burger.png" alt="Burger">
-                <h3>Triple Bacon Burger</h3>
-                <h4>by Jorge Relato</h4>
+                <img src="../assets/pizza.png" alt="Pizza">
+                <h3>Pizza 4 Seasons</h3>
+                <h4>by Fabiana Melo</h4>
             </div>
             <div class="card">
-                <img src="../assets/burger.png" alt="Burger">
-                <h3>Triple Bacon Burger</h3>
-                <h4>by Jorge Relato</h4>
+                <img src="../assets/espaguete.png" alt="Espaguete">
+                <h3>Spaghetti with Garlic</h3>
+                <h4>by Júlia Kinoto</h4>
             </div>
             <div class="card">
-                <img src="../assets/burger.png" alt="Burger">
-                <h3>Triple Bacon Burger</h3>
-                <h4>by Jorge Relato</h4>
+                <img src="../assets/lasanha.png" alt="Lasanha">
+                <h3>Mac n' Cheese Lasagna</h3>
+                <h4>by Juliano Vieira</h4>
             </div>
             <div class="card">
-                <img src="../assets/burger.png" alt="Burger">
-                <h3>Triple Bacon Burger</h3>
-                <h4>by Jorge Relato</h4>
+                <img src="../assets/doce.png" alt="Pão-do-Céu">
+                <h3>Pão-do-Céu Sweets</h3>
+                <h4>by Ricardo Golvea</h4>
             </div>
             <div class="card">
-                <img src="../assets/burger.png" alt="Burger">
-                <h3>Triple Bacon Burger</h3>
-                <h4>by Jorge Relato</h4>
+                <img src="../assets/asinhas.png" alt="Asinhas de Frango">
+                <h3>Barbecue Chicken Wings</h3>
+                <h4>by Vania Steroski</h4>
             </div>
         </div>
     </section>
     <footer>
-        <div>
             <p>All rights reserved, Foodfy recipes.</p>
-        </div>
     </footer>
 </body>
 </html>
