--- a/public/scripts/index.html
+++ b/public/scripts/index.html
@@ -2,9 +2,11 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/modal.css">
     <title>Foodfy</title>
 </head>
 <body>
@@ -27,40 +29,53 @@
     <section class="content2">
         <h2>Most accessed</h2>
         <div class="cards">
-            <div class="card">
+            <div class="card" id="burger">
                 <img src="../assets/burger.png" alt="Burger">
                 <h3>Triple Bacon Burger</h3>
                 <h4>by Jorge Relato</h4>
             </div>
-            <div class="card">
+            <div class="card" id="pizza">
                 <img src="../assets/pizza.png" alt="Pizza">
                 <h3>Pizza 4 Seasons</h3>
                 <h4>by Fabiana Melo</h4>
             </div>
-            <div class="card">
+            <div class="card" id="espaguete">
                 <img src="../assets/espaguete.png" alt="Espaguete">
                 <h3>Spaghetti with Garlic</h3>
                 <h4>by Júlia Kinoto</h4>
             </div>
-            <div class="card">
+            <div class="card" id="lasanha">
                 <img src="../assets/lasanha.png" alt="Lasanha">
                 <h3>Mac n' Cheese Lasagna</h3>
                 <h4>by Juliano Vieira</h4>
             </div>
-            <div class="card">
+            <div class="card" id="doce">
                 <img src="../assets/doce.png" alt="Pão-do-Céu">
                 <h3>Pão-do-Céu Sweets</h3>
                 <h4>by Ricardo Golvea</h4>
             </div>
-            <div class="card">
+            <div class="card" id="asinhas">
                 <img src="../assets/asinhas.png" alt="Asinhas de Frango">
                 <h3>Barbecue Chicken Wings</h3>
                 <h4>by Vania Steroski</h4>
+            </div>
+        </div>
+        <div class="modal-overlay">
+            <div class="modal">
+                <a class="close-modal">
+                    <i class="material-icons">close</i>
+                </a>
+                <div class="modal-content">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <h4></h4>
+                </div>
             </div>
         </div>
     </section>
     <footer>
             <p>All rights reserved, Foodfy recipes.</p>
     </footer>
+    <script src="../scripts/scripts.js"></script>
 </body>
 </html>
